<resources>

    <!-- main -->
    <string name="app_name">Average data usage widget</string>
    <string name="txt_title_info">Information:</string>
    <string name="txt_desc_info">This is a small widget utility to show the data plan usage with a \'constant\' usage bar. Useful to know if you are above or below the \'constant\' data usage (if you consume the same data every second).\n<a href="https://play.google.com/store/apps/details?id=com.trianguloy.continuousDataUsage">App</a> created by <a href="mailto:correo--correo+appCDUW@hotmail.com?Subject=Continous data usage">TrianguloY</a>.\nThe source code is available on <a href="https://github.com/TrianguloY/Average-data-usage-widget">GitHub</a>.</string>
    <string name="txt_desc_widget"> Widget description:  \n- The upper bar is the optimal continuous usage: 0 at the start of the period, half at the middle of the period, full at the end.   \n- The bottom bar is your current usage. If the bottom bar is less than the upper bar then at that rate you will have data unused. If it is more then you will probably surpass it.  \n- Click the right button of the widget to open the history list, click the text to show the corresponding day of the current usage, click anywhere else to manually update it (it updates automatically).</string>
    <string name="toast_preview">This is just a preview. Add the real widget to your home screen!</string>


    <!-- History viewer -->
    <string name="h_title">History Viewer</string>
    <string name="h_toast_info">This screen shows the usage on each day of the period related to the average one.\n\nA bar to the right means the usage was greater than the average, a bar to the left means the opposite.\n\nYou can also see the average and total usage of the full period.\n\nUse the buttons to change the period.</string>
    <string name="menu_title_info">Info</string>
    <string name="menu_title_android">Android Usage</string>
    <string name="txt_average">average</string>
    <string name="txt_total">total</string>


    <!-- permissions -->
    <string name="txt_title_permissions">Permissions:</string>
    <string name="txt_desc_permission_phoneState">NOTIFICATIONS:\nIn order to display a small message at the bottom of the screen (toast) when clicking the widget, Android requires now to allow notifications. The app will not send any standard notification.</string>
    <string name="btn_permissionAsk">Ask permission</string>
    <string name="txt_desc_permission_usageStats">PACKAGE_USAGE_STATS:\nPermission needed to get the current usage from the <a href="https://developer.android.com/reference/android/app/usage/NetworkStatsManager.html#querySummaryForDevice(int,%20java.lang.String,%20long,%20long)">usage service</a>. No other data is retrieved nor used. If required click the button below, select this app and enable the permission.</string>
    <string name="btn_permission_usageStats">Usage Stats settings</string>
    <string name="txt_permissionGranted">Permission granted</string>
    <string name="txt_permissionNotGranted">Permission not granted</string>
    <string name="txt_permissionNeeded">Permission needed</string>
    <string name="txt_error_noPermisionState">Error while getting permission state</string>


    <!-- settings -->
    <string name="s_title">Settings</string>
    <string name="txt_title_settings">Settings:</string>
    <string name="txt_desc_setting_totalData">Total data:\nusage to show in the upper bar when totally filled. Normally your data plan limit. In megabytes (MB)</string>
    <string name="txt_desc_setting_periodInfo">Period length:\nChoose the length of the data period, for example 1 month, 7 days (a week), 28 days, 1 day…</string>
    <string name="txt_desc_setting_periodStart">Period start:\nChoose the first day (included) of the current period, as of today. For example if you have a monthly period that changes each month, choose day 1 of today\'s month.\nThis value will auto-update each time the current period changes. Note: if you set it inconsistently (for example you choose a future day) it will also autoupdate. You can close and reopen the settings screen to force updating.</string>
    <string name="txt_settings_decimals">Decimals:\nNumber of decimals that data numbers will display.</string>
    <string name="txt_settings_gb">MB or GB:</string>
    <string name="chk_settings_gb">Display data in GB instead of MB.</string>
    <string name="txt_settings_inv">Pending/Used:</string>
    <string name="chk_settings_inv">Show pending data (bars will decrease from 100% to 0%) instead of the default used data (bars increase from 0% to 100%).</string>
    <string name="txt_desc_setting_altConv">Alternate conversion:\nCheck this if data usage shown is always less than real usage returned by your company app. [Technical details: uses 1000 instead of 1024 to convert from bytes to megabytes]</string>
    <string name="chkbx_setting_altConv">Use alternate MB conversion</string>
    <string name="settings_mb">MB</string>
    <string name="txt_settings_accum">Accumulated periods:\nNumber of periods that unused data is saved to future periods. If zero, unused data is lost when changing period. If not, the unused megas from the previous n periods will be spent before the current ones (will show a \'negative\' usage until then). Example: if your data provider \'accumulates megas from the past three months\' (with a monthly period) enter 3.</string>
    <string name="txt_settings_accum_extra">Acumulated megas/Data offset:\nMegas accumulated from the previous period, (general offset data). This value will be added to the available data in your current period. You can use it to offset the displayed value (enter negative to subtract available data).\nThis value will auto-update each time the current period changes, but if you are enabling this for the first time you may want to manually enter the accumulated megas from the previous period (check your data provider). Alternatively you can press the button to configure using different helpers. You can edit it at any time.</string>
    <string name="btn_settings_accum">Calculate</string>
    <string name="months">Months</string>
    <string name="days">Days</string>
    <string-array name="itms_settings_accum">
        <item>Set automatically finding month without usage (better check it afterwards)</item>
        <item>Set visible value</item>
    </string-array>
    <string name="txt_visible_title">Current value</string>
    <string name="txt_visible_message">Set here what the widget should display, and the data will be set accordingly</string>


    <!-- widget -->
    <string name="txt_widget_unloaded">-loading-</string>
    <string name="txt_widget_noPermission">Permission missing</string>
    <string name="txt_widget_errorQuering">Error querying data</string>
    <string name="txt_widget_errorService">Service unavailable</string>
    <string name="toast_currentUsage">%s (%s)</string>
    <string name="toast_activityNotFound">Android activity not found.</string>
    <string name="wdgLabel_progressBars">Progress bars (4x1)</string>
    <string name="wdgLabel_rate">Rate (1x1)</string>
    <string name="btn_left"><![CDATA[<]]></string>
    <string name="btn_right"><![CDATA[>]]></string>

    <!-- tweaks -->
    <string name="btn_tweaks">Tweaks</string>
    <string name="desc_tweaks">Tweaks:\nList of experimental settings to tweak some properties of widgets (may be added/removed in future versions if necessary). Some combinations may not work together or show unwanted results (like \'hide date\'+\'hide data\' which will show an empty widget) but they are safe to enable/disable so have fun tweaking as you want.\n\nImportant! Existing widgets may need to be clicked or removed/added to update.</string>
    <string name="btn_close">close</string>
    <string name="tweak_hideDate">Hide date bar and text (the top one)</string>
    <string name="tweak_hideData">Hide data bar and text (the bottom one)</string>
    <string name="tweak_hideBars">Hide data and date bars</string>
    <string name="tweak_hideTexts">Hide data and date texts</string>
    <string name="tweak_whiteWidgets">Show light-theme widgets (white background with black text)</string>
    <string name="tweak_showConsumed">Show the consumed data in the 1x1 widget (instead of the rate)</string>
    <string name="tweak_showAverage">Show the average data in the 1x1 widget (instead of the rate)</string>
    <string name="tweak_showRemaining">Show remaining data instead of consumed data (bars will move from 100% to 0% instead of 0% to 100%)</string>
    <string name="tweak_capNoWarp">"Keep bar at 100% instead of warping (in case your device doesn't show the secondary bar)"</string>
    <string name="tweak_advancedSecondary">The secondary progress adapts dynamically.</string>
    <string name="tweak_androidUsageButton">Open android usage screen when pressing the widget button.</string>

</resources>
