<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    tools:context="com.trianguloy.continuousDataUsage.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="vertical"
        tools:context="com.trianguloy.continuousDataUsage.SettingsActivity">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_info"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <TextView
            android:id="@+id/stt_txt_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_desc_info"
            android:textAllCaps="false" />

        <ImageView
            android:id="@+id/bigseparator1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:src="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_permissions"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <TextView
            android:id="@+id/stt_txt_perm_ps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_desc_permission_phoneState" />

        <TextView
            android:id="@+id/stt_txt_readPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_error_noPermisionState"
            android:textAlignment="center" />

        <Button
            android:id="@+id/stt_btn_readPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_permission_phoneState" />

        <ImageView
            android:id="@+id/smallSeparator3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/activity_margin"
            android:src="@color/colorAccent" />

        <TextView
            android:id="@+id/stt_txt_perm_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_desc_permission_usageStats" />

        <TextView
            android:id="@+id/stt_txt_usageStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_error_noPermisionState"
            android:textAlignment="center" />

        <Button
            android:id="@+id/stt_btn_usageStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_permission_usageStats" />

        <ImageView
            android:id="@+id/bigseparator2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:src="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_settings"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="none|web|email"
            android:clickable="true"
            android:linksClickable="true"
            android:text="@string/txt_desc_setting_totalData" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/stt_edTxt_totalData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MB"
                android:textAllCaps="false"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/smallSeparator2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/activity_margin"
            android:src="@color/colorAccent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_desc_setting_firstDay" />

        <Spinner
            android:id="@+id/stt_spn_firstDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <ImageView
            android:id="@+id/smallSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/activity_margin"
            android:src="@color/colorAccent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_desc_setting_altConv" />

        <CheckBox
            android:id="@+id/stt_chkBx_alternateConversion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chkbx_setting_altConv" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

</ScrollView>
