<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    tools:context="com.trianguloy.continuousDataUsage.activities.Main"
    tools:menu="@menu/menu_history">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/m_btn_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_history"
                android:drawableTint="#AAAAAA"
                android:onClick="onClick"
                android:text="@string/h_title" />

            <Button
                android:id="@+id/m_btn_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@android:drawable/ic_menu_manage"
                android:onClick="onClick"
                android:text="@string/s_title" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_info"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />

        <TextView
            android:id="@+id/stt_txt_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_desc_info"
            android:textAllCaps="false" />

        <com.trianguloy.continuousDataUsage.common.NonTouchableView
            android:id="@+id/m_f_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:onClick="onClick">

        </com.trianguloy.continuousDataUsage.common.NonTouchableView>

        <TextView
            android:id="@+id/stt_txt_info2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_desc_widget"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>
